--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,108 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+/*  */
+* {
+  margin: 0%;
+  padding: 0%;
+  box-sizing: border-box;
+}
+
+/*  list */
+.list-container {
+  width: 40%;
+  display: flex;
+  flex-direction: column;
+  margin: auto;
+  /* border: 2px solid black; */
+}
+
+.list-search-input {
+  height: 40px;
+  border-radius: 8px;
+  border: 1px solid black;
+  padding: 5px;
+  font-size: 16px;
+}
+
+.user-detail-container {
+  display: flex;
+  font-size: 24px;
+  font-weight: 500;
+  align-items: center;
+  gap: 5%;
+  width: 100%;
+  padding: 10px;
+  max-width: 100%;
+  cursor: pointer;
+}
+
+.user-image {
+  border-radius: 50%;
+}
+
+.accordion-wrapper {
+  display: flex;
+  flex-direction: column;
+  border: 1px solid rgb(188, 188, 188);
+  border-radius: 8px;
+  margin-top: 20px;
+  /* min-height: 100px; */
+  height: fit-content;
+}
+
+/* expanded user details */
+.user-basic-details,
+.user-description {
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+}
+
+.user-description {
+  flex-direction: column;
+}
+
+.basic-detail-header {
+  color: rgb(158, 154, 154);
+  font-size: 20px;
+}
+
+.user-detail-buttons {
+  display: flex;
+  justify-content: flex-end;
+  gap: 20px;
+  padding: 10px;
+}
+/* deletion */
+
+.delete-popup {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  /* gap: 50%; */
+  height: 200px;
+  padding: 20px;
+}
+
+.delete-popup-row-1 {
+  display: flex;
+  justify-content: space-between;
+}
+
+.delete-popup-row-2 {
+  display: flex;
+  justify-content: flex-end;
+  gap: 20px;
 }
