--- a/src/index.css
+++ b/src/index.css
@@ -82,6 +82,7 @@ code {
   display: flex;
   justify-content: space-between;
   padding: 20px;
+  gap: 10px;
 }
 
 .user-description {
@@ -134,4 +135,43 @@ code {
   display: flex;
   justify-content: flex-end;
   gap: 20px;
+}
+
+/* edi page */
+
+.cancel-save,
+.save-details {
+  font-size: 28px;
+  color: greenyellow;
+  cursor: pointer;
+}
+
+.save-details {
+  color: red;
+}
+
+.edit-btns-container {
+  display: flex;
+  justify-content: end;
+  padding: 20px;
+  gap: 20px;
+}
+
+.edit-input {
+  width: 100px;
+  height: 28px;
+  border: 1px solid grey;
+  border-radius: 5px;
+  padding: 5px;
+}
+
+.detail-container {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.desc-input-edit {
+  width: 100%;
+  height: 100px;
 }
